--- a/.gitignore
+++ b/.gitignore
@@ -150,4 +150,5 @@ core
 *test_scripts*
 */checkpoint/*
 sc_venv_template_hydra/venv_jurecadc_hwai/
+sc_venv_template_hydra/venv_jurecadc/
 checkpoint/*
