--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,5 @@ sc_venv_template_hydra/venv_jurecadc_hwai/
 sc_venv_template_hydra/venv_jurecadc/
 checkpoint/*
 results/*
+rewardbench_eval/output/*
+rewardbench_eval/results/*
